2005-10-10  Lluis Sanchez Gual  <lluis@novell.com>

	* HttpServer.cs: Removed all non-sense regular expressions for
	parsing files. Makes the channel faster and fixes bug #75886.

2005-07-06  Lluis Sanchez Gual  <lluis@novell.com>

	* HttpServer.cs: Close the connection after processing the request.
	Based on a patch by Brion Vibber. Fixes bug #75467.

2005-05-18  Lluis Sanchez Gual  <lluis@novell.com>

	* HttpServerChannel.cs: Catch exceptions thrown in the server thread.
	In StopListening, wait for the server thread to stop before returning.

2005-01-25  Lluis Sanchez Gual  <lluis@novell.com>

	* HttpServer.cs: Use a single stream for in an out stream, since they
	where the same. Set IPAddress and ConnectionId transport headers.

2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* HttpServerChannel.cs: Use the new RemotingThreadPool to manage threads.
	  Fixed some warnings.
	* HttpServer.cs: Minor fix.

2004-12-17  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpHelper.cs: Removed unused method. Optimized CopyStream method.
	* HttpServerChannel.cs: SendResponse does not return a bool any
	  more, it throws an exception when it fails.
	* HttpServer.cs: Improved handling of errors.

2004-10-22  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpClientChannel.cs: In CreateMessageSink, process the remote channel
	  data if the provided url does not have the expected format. This fixes
	  a regression from the fix for bug #66768 and fixes #68669.

2004-09-27  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpClientChannel.cs: Throw an http exception if the response is a 500,
	  don't try to deserialize the exception.

2004-05-26  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpServerChannel.cs: Default port is 0.

2004-05-25  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpServerChannel.cs: Take unused port if the provided prot is 0.

2004-05-13  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpChannel.cs, HttpClientChannel.cs: Added missing IDictionary 
	properties.